<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ToShowFavoriteFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/favorite_movies"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_marginHorizontal="18dp"
            android:id="@+id/to_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_show_fav"
            android:textSize="30sp"
            android:gravity="center" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:id="@+id/signUp_b"
            android:layout_height="48dp"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="16dp"
            app:cardBackgroundColor="@color/appColor"
            app:cardCornerRadius="8dp">

            <ImageView
                app:tint="@color/white"
                android:layout_marginStart="6dp"
                android:layout_gravity="center_vertical|start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/sign_in_ic" />

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/sign_up"
                android:textColor="@color/white" />

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>