<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:text="@string/skip"
                android:id="@+id/skip_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="20dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/green"

                />

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="160dp"
                android:id="@+id/signIn_i"
                android:layout_height="160dp"
                android:src="@drawable/sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_marginTop="28dp"
                android:id="@+id/signIn_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/signInText"
                android:textColor="@color/grey1"
                app:layout_constraintTop_toBottomOf="@id/signIn_i"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold" />

            <LinearLayout
                app:layout_constraintTop_toBottomOf="@+id/signIn_t"
                android:id="@+id/text_fields"
                android:layout_marginTop="18dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_text_layout"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:layout_marginHorizontal="16dp"
                    app:boxBackgroundColor="@color/grey2"
                    app:boxCornerRadiusBottomEnd="24dp"
                    app:boxCornerRadiusBottomStart="24dp"
                    app:boxCornerRadiusTopEnd="24dp"
                    app:boxCornerRadiusTopStart="24dp"
                    app:boxStrokeWidth="0dp"
                    app:hintTextColor="@color/grey3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_tf"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/enter_email" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    app:boxBackgroundColor="@color/grey2"
                    app:boxCornerRadiusBottomEnd="24dp"
                    app:boxCornerRadiusBottomStart="24dp"
                    app:passwordToggleEnabled="true"

                    app:boxCornerRadiusTopEnd="24dp"
                    app:boxCornerRadiusTopStart="24dp"
                    app:boxStrokeWidth="0dp"
                    app:hintTextColor="@color/grey3"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_tf"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/password_sign_in" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:id="@+id/signIn_b"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/text_fields"
                android:layout_marginTop="28dp"
                android:layout_marginHorizontal="16dp"
                app:cardBackgroundColor="@color/appColor"
                app:cardCornerRadius="8dp">

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/signInText"
                    android:textColor="@color/white" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/signIn_b"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="28dp"
                android:text="@string/forget_password"
                android:textSize="14sp"
                android:textColor="@color/grey4" />

            <LinearLayout
                android:layout_marginTop="28dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/forget_password"
                android:orientation="horizontal"
                android:gravity="center"
                android:id="@+id/nav_to_signup"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:text="@string/do_not_have_acco"
                    android:textColor="@color/grey4"
                    android:textSize="14sp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="14sp"
                    android:textColor="@color/appColor" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:indeterminateTint="@color/appColor"
                android:visibility="gone" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>