<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"

            >

            <ImageView

                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/sign_up"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_marginTop="23dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/sign_up"
                android:textColor="@color/gray1"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/name_text_layout"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="16dp"
                app:boxBackgroundColor="@color/gray2"
                app:boxCornerRadiusBottomEnd="24dp"
                app:boxCornerRadiusBottomStart="24dp"
                app:boxCornerRadiusTopEnd="24dp"
                app:boxCornerRadiusTopStart="24dp"
                app:boxStrokeWidth="0dp"
                app:hintTextColor="@color/gray3">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPersonName"
                    android:layout_height="48dp"
                    android:id="@+id/name_tf"
                    android:hint="@string/name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                app:boxBackgroundColor="@color/gray2"
                app:boxCornerRadiusBottomEnd="24dp"
                app:boxCornerRadiusBottomStart="24dp"
                app:boxCornerRadiusTopEnd="24dp"
                app:boxCornerRadiusTopStart="24dp"
                app:boxStrokeWidth="0dp"
                app:hintTextColor="@color/gray3">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:id="@+id/email_tf"
                    android:inputType="textEmailAddress"

                    android:hint="@string/email" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_text_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                app:boxBackgroundColor="@color/gray2"
                app:boxCornerRadiusBottomEnd="24dp"
                app:boxCornerRadiusBottomStart="24dp"
                app:boxCornerRadiusTopEnd="24dp"
                app:boxCornerRadiusTopStart="24dp"
                app:boxStrokeWidth="0dp"

                app:hintTextColor="@color/gray3">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:id="@+id/phone_tf"
                    android:inputType="phone"
                    android:hint="@string/phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_text_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                app:boxBackgroundColor="@color/gray2"
                app:boxCornerRadiusBottomEnd="24dp"
                app:boxCornerRadiusBottomStart="24dp"
                app:boxCornerRadiusTopEnd="24dp"
                app:boxCornerRadiusTopStart="24dp"
                app:boxStrokeWidth="0dp"

                app:hintTextColor="@color/gray3">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:id="@+id/address_tf"
                    android:inputType="text"
                    android:hint="@string/address" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                app:boxBackgroundColor="@color/gray2"
                app:boxCornerRadiusBottomEnd="24dp"
                app:boxCornerRadiusBottomStart="24dp"
                app:boxCornerRadiusTopEnd="24dp"
                app:boxCornerRadiusTopStart="24dp"
                app:boxStrokeWidth="0dp"
                app:hintTextColor="@color/gray3">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:id="@+id/password_tf"
                    android:inputType="textPassword"
                    android:hint="@string/password_sign_up" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_text_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                app:boxBackgroundColor="@color/gray2"
                app:boxCornerRadiusBottomEnd="24dp"
                app:boxCornerRadiusBottomStart="24dp"
                app:boxCornerRadiusTopEnd="24dp"
                app:boxCornerRadiusTopStart="24dp"
                app:boxStrokeWidth="0dp"

                app:hintTextColor="@color/gray3">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:id="@+id/conform_pass_tf"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_pass" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:id="@+id/sign_up_b"
                android:layout_height="48dp"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="16dp"
                app:cardBackgroundColor="@color/appColor"
                app:cardCornerRadius="8dp">

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white" />

            </com.google.android.material.card.MaterialCardView>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nav_to_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:textColor="@color/gray4"
                android:textSize="14sp"
                android:text="@string/have_acco"

                android:focusable="true" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminateTint="@color/appColor"
        android:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>